--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ zip = { version = "0.6", features = ["deflate", "aes-crypto"] }
 encoding_rs = "0.8"
 clap = { version = "4.1", features = ["derive"] }
 uuid = { version = "1", features = ["v4"] }
+unrar = "0.5.6"
